add java 17 compatibility